Archive2/c0/745285733cefd8/output
main.cpp:1:12: error: expected ',' or '...' before '(' token
 int f(int a(*)[3])
            ^
main.cpp: In function 'int f(int)':
main.cpp:5:20: error: invalid types 'int[int]' for array subscript
           int v=a[j][k];
                    ^
main.cpp: In function 'int check()':
main.cpp:16:25: error: expected ')' before 'return'
         if(f(a[i] == 0) return 0;
                         ^
main.cpp: In function 'int f(int)':
main.cpp:10:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
bash: line 8: ./a.out: No such file or directory
